style.css
html,
body {
  margin: 0;
  height: 100%;
  font-family: Roboto;
  --sidebar-color: #3b82f6;
  --main-content-color: whitesmoke;
  --global-padding: 10px;
}
@font-face {
  font-family: Roboto;
  src: url("/Roboto/Roboto-Regular.ttf");
}
.container {
  display: grid;
  height: 100%;
  grid-template-columns: repeat(5, minmax(100px, 1fr));
  grid-template-rows: repeat(5, minmax(100px, 1fr));
}
h1,
p,
div {
  margin: 0px;
  font-size: clamp(1rem, 5vw, 1.1rem);
}
.icon {
  width: 20px;
}
li {
  list-style-type: none;
}
.header-bottom-left .icon {
  filter: invert(0%) sepia(4%) saturate(7485%) hue-rotate(207deg)
    brightness(99%) contrast(105%);
  width: 20px;
}
.header-bottom-right button {
  background-color: var(--sidebar-color);
  border: 0;
  height: 35px;
  border-radius: 12px;
  color: #fff;
  font-weight: 600;
  transition-duration: 0.4s;
}
button:hover {
  background-color: #eff6ff;
  color: var(--sidebar-color);
  border: 1px solid rgba(0, 0, 0, 0.144);
}
.sidebar-container {
  display: grid;
  align-items: center;
  grid-template-rows: repeat(auto-fit, 100px);
  grid-row: 1 / 7;
  gap: 40px;
  color: #eff6ff;
  background-color: var(--sidebar-color);
}
.sidebar-content {
  display: grid;
  grid-row: 1 / 4;
  justify-content: center;
}
.title {
  font-weight: 700;
}
.sidebar-title {
  display: grid;
  gap: 10px;
}
.sidebar-top {
  display: grid;
}
.sidebar-top ul {
  display: inherit;
  padding: 0;
}
.sidebar-container li:hover {
  font-weight: 800;
}
.header-container {
  display: grid;
  padding: var(--global-padding);
  border-bottom: 1px solid rgba(0, 0, 0, 0.092);
  grid-column: 2 / 6;
}
.header-top,
.header-bottom {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
  /* justify-content: space-between; */
}
.header-top-left,
.header-top-right {
  display: grid;
  align-items: center;
  grid-template-columns: repeat(auto-fit, minmax(10px, 1fr));
}
.header-top-left div {
  display: flex;
}
.header-top-left input {
  flex: 10;
}
.header-top-right div {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  gap: 20px;
}

.header-bottom {
  display: grid;
  align-content: center;
}
.header-bottom-left {
  display: grid;
  grid-template-columns: 50px 200px;
  gap: 5%;
}
#greeting {
  font-size: 0.8em;
}
.username {
  font-size: 1.4em;
}
.header-bottom-right {
  display: grid;
  grid-template-columns: repeat(auto-fit, 70px);
  justify-content: flex-end;
  justify-items: center;
  align-items: center;
}
.main-content-container {
  display: grid;
  background-color: var(--main-content-color);
  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
  grid-column: 2 / 6;
  grid-row: 2 / 6;
  overflow: scroll;
}
.projects-container {
  grid-column: 2 / 5;
  padding: 10px;
}
.section-title {
  font-weight: 700;
  padding-bottom: 10px;
}
.cards {
  display: grid;
  grid-row: 2/6;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  gap: 25px;
}

.project-card {
  display: grid;
  position: relative;
  background-color: #fff;
  gap: 10px;
  border-radius: 20px;
  padding: 40px;
  box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.049);
  transition-duration: 1.4s;
}
.project-name {
  font-weight: 700;
}
.project-card:hover {
  top: 2.5px;
}
.card-actions {
  display: flex;
  justify-content: flex-end;
  gap: 10px;
}
.annouce-trending-sections {
  display: grid;
  padding-top: 20px;
  grid-template-rows: repeat(auto-fit, minmax(200px, 1fr));
  align-content: space-around;
  gap: 10%;
}
.announce-content {
  display: grid;
  grid-template-rows: repeat(auto-fit, 100px);
  gap: 3%;
  padding: 20px;
}
.annoucements-container {
  display: grid;
  background-color: #fff;
}
.trending-container {
  display: grid;
  padding: 20px;
  background-color: #fff;
}
.trending-card img {
  width: 50px;
  height: 50px;
  border: 1px solid rgb(233, 229, 229);
  /* border-radius: 25px; */
}
.trending-card {
  display: flex;
  border-bottom: 1px solid rgba(0, 0, 0, 0.127);
  justify-content: center;
  align-items: center;
  width: 250px;
  gap: 10px;
}

.img-container {
  width: 50px;
  height: 50px;
  border-radius: 50%;
  overflow: hidden;
  border: 1px grey solid;
}
img {
  width: 100%;
  height: auto;
  justify-content: center;
}

